src/components/UserProfile/UserProfile.css
:root {
    --userprofile-h2: #061D45;
    --userprofile-p: #5A6080;
    --userprofile-grid-mobile: 5% 90% 5%;
    --userprofile-grid-desktop: 20% 60% 20%;
    --userprofileedit-grid-mobile: 5% 90% 5%;
    --userprofileedit-grid-desktop: 35% 30% 35%;
    --userprofile-background: linear-gradient(180deg, rgba(249,249,255,1) 0%, rgba(234,235,244,1) 100%);
}

.userprofile{
    display: grid;
    grid-template-columns: var(--userprofile-grid-mobile);
}

.userprofile p {
    color: var(--userprofile-p);
}

.userprofile-content{
    grid-column: 2;
}

.userprofile-content__info{
    display: grid;
    grid-template-columns: 30% 70%;
    margin-top: 2rem;
}

.userprofile-content__info__img{
    grid-column: 1;
    width: 10rem;
    height: 10rem;
    border-radius: 0.5rem;
}

.userprofile-content__info__textdiv{
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    text-align: right;
}

.userprofile-content__info__textdiv1{
    font-weight: bold;
    font-size: 2rem;
    color: var(--userprofile-h2);
}

.userprofile-content__info__textdiv2{
    text-align: right;
}

.userprofile-content__card{
    border: 1px solid #bbb;
    padding: 1rem;
    border-radius: 1rem;
    margin: 2rem 0;
    background-color: #fff;
}

.userprofile-content__card h2{
    color: var(--userprofile-h2);
    margin-bottom: 1rem;
}

.userprofile-content__card h2 span{
    cursor: pointer;
}

.userprofile-content__edit{
    background-color: #4CA5FC;
    padding: 1rem;
    border-radius: 1rem;
    margin: 2rem 0;
    cursor: pointer;
}

.userprofile-content__edit h2{
    text-align: center;
    color: white;
}

.userprofile-content__edit__link{
    text-decoration: none;
    border: none;
    display: block;
}
.userprofile-content__edit__link h2{
    margin: 0;
}

.userprofile-content__grid__video > video{
    border-radius: 1rem;
}

.userprofile-content__grid__skills > p{
    display: inline-block;
    background-color: #28406A;
    color: white;
    padding: 0.5rem;
    margin: 0 1rem 1rem 0;
    border-radius: 1rem;
}

.userprofileedit{
    display: grid;
    grid-template-columns: 10% 80% 10%;
}

.userprofileedit h2{
    margin: 1rem 0;
    color: var(--userprofile-h2);
}

.userprofileedit__form{
    grid-column: 2;
}

.userprofileedit__form label{
    display: block;
}

.userprofileedit__form input{
    font-family: inherit;
    padding: 1rem;
    margin: 0.5rem 0 1rem 0;
    border-radius: 1rem;
    border: solid 1px #ddd;
    width: 100%;
    box-shadow: 1px 5px 29px 4px #081f4710;
    -webkit-box-shadow: 1px 5px 29px 4px #081f4710;
    -moz-box-shadow: 1px 5px 29px 4px #081f4710;
}

.userprofileedit__form__button {
    margin: 1rem 2rem 2rem 0;
    color: #fff;
    background-image: linear-gradient(135deg, #4CA5FC -50%, #2D78CC 150%);
    font-weight: 600;
    font-size: 1.25rem;
    border-radius: 1rem;
    border: none;
    transition: filter 0.2s ease-out;
}

.userprofileedit__form button > a{
    text-decoration: none;
    color: inherit;
}

.userprofileedit button:hover {
    filter: brightness(1.20);
    cursor: pointer;
}

.userprofileedit__form__button--cancel {
    background: none;
    background-color: #FFF;
    color: #2D78CC;
}

@media (min-width: 31.25em) {
    .userprofile{
        grid-template-columns: var(--userprofile-grid-desktop);
    }

    .userprofile-content__info {
        display: grid;
        margin-top: 2rem;
        text-align: right;
    }

    .userprofile-content__grid{
        display: grid;
        grid-template-columns: 50% 50%;
        grid-gap: 0 2rem;
    }

    .userprofile-content__grid__video > video {
        height: 75%;
    }

    .userprofileedit{
        grid-template-columns: var(--userprofileedit-grid-desktop);
    }
}

